--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
     "orientation": "portrait-primary",
     "icons": [
         {
+            "src": "images/icons/icon-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
             "src": "images/icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png",
